# qa_guru_spoonacular_test_project

./: .env.example  README.md  pyproject.toml  pytest.ini
schema/: add_to_shopping.json  compute_glycemic_load.json  connect_user.json  ingredient_info.json  invalid_ingredient_id.json  meal_plan_day.json  meal_plan_week.json  search_ingredients.json  search_recipe.json  search_similar_recipe.json
spoonacular_test_project/data/: users.py
spoonacular_test_project/helper/: api_requests.py  attach_web.py  load_schema.py
spoonacular_test_project/pages/web_pages/: forgot_password_page.py  main_page.py  register_page.py  user_profile_page.py
tests/api/: conftest.py  connect_user_test.py  ingredient_test.py  mealplanner_test.py  recipe_test.py  shopping_list_test.py  unauthorized_request_test.py
tests/api_tests/: conftest.py  connect_user_test.py  ingredient_test.py  mealplanner_test.py  recipe_test.py  shopping_list_test.py  unauthorized_request_test.py
tests/web/: auth_test.py  custom_food_test.py  forgot_password_test.py  header_links_test.py  register_test.py
tests/web_tests/: auth_test.py  conftest.py  custom_food_test.py  forgot_password_test.py  header_links_test.py  register_test.py
